maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:21: error: value ! is not a member of Int
    while (sommeAngle !0 && isDirectionFree(getDirection())) {
                      ^PledgeMaze:52: error: not found: value directionActuelle
    directionActuelle = dir;
    ^PledgeMaze:56: error: not found: value directionActuelle
      setDirection(directionActuelle)
                   ^